styles: correct contrast on button-like links

--- a/sites/_shared/_styles/foundations/color.scss
+++ b/sites/_shared/_styles/foundations/color.scss
@@ -25,6 +25,7 @@
    --bg: var(--bluish-white);
    --bg-secondary: var(--light-blue);
    --fg: var(--blue);
+   --fg-secondary: var(--blue-2);
 
    --code-bg: var(--light-gray-1);
    --code-block-bg: var(--light-gray-0);
