--- a/sites/_shared/_styles/layouts/link-page.scss
+++ b/sites/_shared/_styles/layouts/link-page.scss
@@ -37,6 +37,11 @@
          padding: 1em 2em;
          background: var(--bg-secondary);
       }
+
+      a.link:hover {
+         background: var(--fg);
+         color: var(--bg);
+      }
    }
 
    .background {
